--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles.add(file('../../proguard-gvr.txt'))
         }
     }
 }
@@ -22,7 +23,17 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'com.google.android.material:material:1.1.0-rc02'
+    // Adds Google VR spatial audio support
+    implementation 'com.google.vr:sdk-audio:1.160.0'
+
+    // Required for all Google VR apps
+    implementation 'com.google.vr:sdk-base:1.160.0'
+    implementation 'com.google.vr:sdk-panowidget:1.160.0'
+
+    implementation 'com.github.deano2390:MaterialShowcaseView:1.3.4'
 }
